@@ -17,7 +17,7 @@
 	<div id="ps-page-title">
 		<div class="inner">
 		<span>
-			<input id='q-hdr' name="q" value="{if $results}{$results.phrase|escape}{else}{$q|escape}{/if}" class="field search">
+			<input id='q-hdr' type="text" name="q" value="{if $results}{$results.phrase|escape}{else}{$q|escape}{/if}" class="field search" maxlength="50">
 			<input name="sort" value="{$sort|escape}" type="hidden">
 			<input name="order" value="{$order|escape}" type="hidden">
 			<a href="index.php" title="<#Clear Search#>" alt="<#Clear Search#>"><img id="ps-search-clear" src="{theme->url}/img/icons/turd.gif"></a>
